--- a/src/styles/game-actions.css
+++ b/src/styles/game-actions.css
@@ -7,20 +7,22 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 4%;
-
-  background-color: black;
 }
 
 .game-action-button {
-  /* height: 85%;
-  width: calc(100% - 6% - 6%);
-
-  margin: 2%; */
-
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 
   background-color: white;
 
