Implemented requested changes
Changed the trash-image links in play.js, cargo.js and secret-cargo.js so that they use a absolute path.

--- a/src/styles/cargo.css
+++ b/src/styles/cargo.css
@@ -38,5 +38,6 @@
     transform: rotate(90deg);
     font-family: var(--font-primary);
     margin: 0px;
+    min-width: 40px;
     text-align: center;
 }
