--- a/src/styles/cargo.css
+++ b/src/styles/cargo.css
@@ -1,3 +1,4 @@
+/*
 #cargos_all {
     display: flex;
     justify-content: space-around;
@@ -41,3 +42,4 @@
     min-width: 40px;
     text-align: center;
 }
+*/
