--- a/src/styles/game-actions.css
+++ b/src/styles/game-actions.css
@@ -1,3 +1,4 @@
+/*
 .game-action-bar {
   height: 10vh;
   width: 50%;
@@ -39,3 +40,4 @@
 .game-action-selected {
   background-color: var(--game-action-selected-color);
 }
+*/
