--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -32,4 +32,6 @@ html {
     --font-size-title-big: 2vw;
     --font-size-title-small: 2vw;
     --font-size-label: 2vw;
+
+    --your-team-color: #fff;
 }
