--- a/src/styles/lobby.css
+++ b/src/styles/lobby.css
@@ -1,6 +1,5 @@
-@import "variables.css";
-
-#lobbyWrapper {
+/*
+#lobby {
     background-color: var(--background-color);
     height: 100vh;
     width: 100vw;
@@ -9,15 +8,26 @@
     align-items: center;
     color: var(--text-color);
 }
+*/
+#lobby {
+    height: 100vh;
+    flex-grow: 1;
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--text-color);
+    padding: 0 30px;
+}
 
-#lobbyWrapper h1,
-#lobbyWrapper h2,
-#lobbyWrapper h3,
-#lobbyWrapper p {
+#lobby h1,
+#lobby h2,
+#lobby h3,
+#lobby p {
     margin: 0;
 }
 
-#lobbyWrapper h1 {
+#lobby h1 {
     font-family: var(--font-primary);
     text-shadow: 0 0 5px var(--logo-color);
     letter-spacing: .8px;
@@ -25,31 +35,26 @@
     margin: 40px 0 20px;
 }
 
-#lobbyWrapper h2 {
+#lobby h2 {
     font-family: var(--font-primary);
     font-weight: 300;
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-#teams {
-    width: 85%;
+#lobby #teams {
+    width: 100%;
     max-height: 420px;
-    overflow-y: scroll;
-    flex-grow: 1;
     border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
     padding-top: 15px;
 }
 
-.teamDiv {
-    width: 70%;
+#lobby .teamDiv {
+    min-height: 50px;
+    width: 100%;
     background-color: white;
     color: var(--background-color);
     display: flex;
@@ -61,52 +66,48 @@
     align-items: center;
     font-family: var(--font-primary);
     font-weight: 600;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
     box-shadow: 0px 15px 20px #1c1b20;
     flex-basis: 15%;
 }
 
-.teamDiv:hover {
+#lobby .teamDiv:hover {
     cursor: pointer;
 }
 
-.markedTeamBlue {
+#lobby .markedTeamBlue {
     box-shadow: 0px 0px 10px 3px #5fffff;
 }
 
-.markedTeamPink {
+#lobby .markedTeamPink {
     box-shadow: 0px 0px 10px 3px #ff7abc;
 }
 
-.markedTeamPurple {
+#lobby .markedTeamPurple {
     box-shadow: 0px 0px 10px 3px #e375ff;
 }
 
-.markedTeamDarkblue {
+#lobby .markedTeamDarkblue {
     box-shadow: 0px 0px 10px 3px #3686ff;
 }
 
-.markedTeam {
-    box-shadow: 0 0 10px 5px white;
+#lobby .markedTeam {
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.9);
 }
 
-.no-click {
+#lobby .no-click {
     pointer-events: none;
 }
 
-#teamName {
+#lobby #teamName {
     font-size: 25px;
 }
 
-#playerDiv {
+#lobby #playerDiv {
     margin-top: 5px;
     color: #353338;
 }
 
-#playerDiv > span {
+#lobby #playerDiv > span {
     width: 1px;
     height: 11px;
     background-color: rgb(37, 36, 36);
@@ -114,7 +115,7 @@
     margin: 0 5px;
 }
 
-#players {
+#lobby #players {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -122,11 +123,21 @@
     overflow-x: scroll;
 }
 
-#players > div:last-child > span {
+#lobby #players > div:last-child > span {
     width: 0;
     margin: 0;
 }
 
+#lobby #lobby-buttons-container {
+    width: 100%;
+    display: flex;
+}
+
+#lobby #lobby-buttons-container #startBtn {
+    margin-left: 30px;
+}
+
+/*
 .lobby-buttons {
     width: 90%;
     flex-basis: 120px;
@@ -161,8 +172,10 @@
 .lobby-buttons button:hover {
     cursor: pointer;
 }
+*/
 
-#startBtn, #continue {
+/*
+#startBtn {
     color: var(--logo-color);
     background-color: #f4f4f4;
     border-color: transparent;
@@ -171,7 +184,9 @@
 #startBtn:hover, #startBtn:active {
     background-color: #ffffffc9;
 }
+*/
 
+/*
 #quit {
     color: #f4f4f4;
     border: 2px solid #f4f4f4;
@@ -180,3 +195,4 @@
 #quit:hover, #quit:active {
     background-color: #2c2e33;
 }
+*/
