--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,15 @@
-@import 'variables.css';
+#login-view {
+    height: 100vh;
+    flex-grow: 1;
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--text-color);
+    padding: 0 30px;
+}
 
+/*
 #home {
   width: 100vw;
   height: 100vh;
@@ -11,7 +21,6 @@
   display: -ms-flexbox;
 
   display: flex;
-  /* justify-content: center; */
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -20,13 +29,17 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
+*/
 
+/*
 #login-logo {
   width: 100%;
   
   margin-bottom: 10%;
 }
+*/
 
+/*
 #error {
   width: 90%;
   height: 8%;
@@ -44,6 +57,7 @@
 
   transition: opacity 500ms ease;
 }
+*/
 
 .login-error-active {
   opacity: 0 !important;
@@ -98,6 +112,7 @@
   color: var(--text-color);
 }
 
+/*
 #login-button {
   -webkit-box-shadow: 0 0 10px 5px white;
           box-shadow: 0 0 10px 5px white;
@@ -123,6 +138,7 @@
   -webkit-box-shadow: 0 0 10px 5px var(--logo-color);
           box-shadow: 0 0 10px 5px var(--logo-color);
 }
+*/
 
 @media(min-width: 800px) {
   #login-logo {
