--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -1,4 +1,4 @@
-.planWrapper {
+#plan-view {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
   font-family: var(--font-primary);
   font-size: 0.9rem;
 }
-#controlPanel {
+#plan-view #controlPanel {
   height: 10%;
   width: 100%;
   margin: 4% 0 0 0;
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
 }
-#rocketBox {
+#plan-view #rocketBox {
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -32,13 +32,13 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.rocketDiv {
+#plan-view .rocketDiv {
   height: 30px;
   width: 20%;
   background-repeat: no-repeat;
   background-position: center;
 }
-.yourTeam {
+#plan-view .yourTeam {
   border: 2px solid var(--text-color);
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -47,19 +47,19 @@
   -o-border-radius: 10px;
   box-shadow: 0px 0px 20px 1px var(--text-color);
 }
-.lBlue {
+#plan-view .lBlue {
   background-image: url(../../assets/rocket_lBlue.svg);
 }
-.pink {
+#plan-view .pink {
   background-image: url(../../assets/rocket_pink.svg);
 }
-.purple {
+#plan-view .purple {
   background-image: url(../../assets/rocket_purple.svg);
 }
-.dBlue {
+#plan-view .dBlue {
   background-image: url(../../assets/rocket_dBlue.svg);
 }
-#timer {
+#plan-view #timer {
   margin-top: 3%;
   font-size: 16px;
   font-weight: 800;
@@ -75,7 +75,7 @@
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-#actions {
+#plan-view #actions {
   border: 5px double var(--text-color);
   border-radius: 10px;
   height: 63%;
@@ -92,7 +92,7 @@
   overflow-y: scroll;
   padding: 5px;
 }
-.availableAction {
+#plan-view .availableAction {
   background-color: var(--game-action-background-color);
   border: 2px solid var(--text-color);
   color: var(--game-action-text-color);
@@ -103,10 +103,10 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.aName {
+#plan-view .aName {
   font-weight: 800;
 }
-#player-actions {
+#plan-view #player-actions {
   min-height: 10%;
   border: 5px double var(--text-color);
   border-radius: 10px;
@@ -121,7 +121,7 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-#player-actions > div {
+#plan-view #player-actions > div {
   border:2px solid var(--text-color);
   border-radius: 10px;
   display: flex;
@@ -135,6 +135,6 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-#actions, #player-actions {
+#plan-view #actions, #player-actions {
   margin-top: 2%;
 }
